<resources>
    <string name="app_name">El Punzon</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido!!!"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">La contraselade debe > 5 caracteres</string>
    <string name="login_failed">"Falló el inicio de sesión"</string>
    <!-- Strings related to register -->
    <string name="name">"Nombre"</string>
    <string name="last_name">"Apellido"</string>
    <string name="id_type">"Tipo de ID"</string>
    <string name="id">"ID"</string>
    <string name="address">"Dirección"</string>
    <string name="mobile">"Teléfono móvil"</string>
    <string name="email">"Email"</string>
    <string name="action_register_short">Registrar</string>
    <string-array name="id_type_array">
        <item>Cédula de ciudadanía</item>
        <item>Tarjeta de identidad</item>
        <item>Cedula de extranjería</item>
        <item>Pasaporte</item>
    </string-array>
</resources>